--- a/SalesWebMvc/appsettings.json
+++ b/SalesWebMvc/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "SalesWebMvcContext": "Server=(localdb)\\mssqllocaldb;Database=SalesWebMvcContext-81ef8ded-9048-4f0e-bfb9-eea6f7925f22;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
