SQL Server adaptation and first Migration

--- a/SalesWebMvc/appsettings.json
+++ b/SalesWebMvc/appsettings.json
@@ -8,6 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SalesWebMvcContext": "Server=(localdb)\\mssqllocaldb;Database=SalesWebMvcContext-81ef8ded-9048-4f0e-bfb9-eea6f7925f22;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "SalesWebMvcContext": "Server=(localdb)\\mssqllocaldb;Database=SalesWebMvcAppDb;Trusted_Connection=True;MultipleActiveResultSets=true"
+    //"Server=(localdb)\\mssqllocaldb;Database=SalesWebMvcContext-81ef8ded-9048-4f0e-bfb9-eea6f7925f22;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
